--- a/materialUIFrontEnd/package.json
+++ b/materialUIFrontEnd/package.json
@@ -1,6 +1,7 @@
 {
   "name": "materialui-front-end",
   "version": "0.1.0",
+  "proxy": "http://127.0.0.1:5000",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
