modified package.json. attempt 6 at deploying

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
         "frontend": "cd materialUIFrontEnd && npm start",
-        "start": "node your-script.js"
+        "start": "react-scripts start"
     }
 }
