modified package.json. attempt 7 at deploying

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "frontend": "cd materialUIFrontEnd && npm start",
-        "start": "react-scripts start"
+        "start": "cd materialUIFrontEnd && react-scripts start",
+        "build": "cd materialUIFrontEnd && react-scripts build"
     }
 }
