--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,22 @@
-appnope==0.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-black==22.1.0
-bleach==4.1.0
-cffi==1.15.0
-click==8.0.3
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
+beautifulsoup4==4.11.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
 dnspython==2.2.0
-entrypoints==0.4
-executing==0.8.2
-Flask==2.1.0
-Flask-Cors==3.0.10
-Flask-PyMongo==2.3.0
-iniconfig==1.1.1
-ipykernel==6.9.1
-ipython==8.0.1
-ipython-genutils==0.2.0
+Flask==2.0.3
+idna==3.3
+importlib-metadata==4.11.2
 itsdangerous==2.1.0
-jedi==0.18.1
 Jinja2==3.0.3
-jsonschema==4.4.0
-jupyter-client==7.1.2
-jupyter-core==4.9.2
-jupyterlab-pygments==0.1.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mypy-extensions==0.4.3
-nbclient==0.5.11
-nbconvert==6.4.2
-nbformat==5.1.3
-nest-asyncio==1.5.4
-notebook==6.4.8
-packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==2.5.0
-pluggy==1.0.0
-prometheus-client==0.13.1
-prompt-toolkit==3.0.28
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pycparser==2.21
-Pygments==2.11.2
-pymongo==3.10.0
-pyparsing==3.0.7
-pyrsistent==0.18.1
-pytest==7.1.1
-pytest_check==1.0.5
-python-dateutil==2.8.2
-pyzmq==22.3.0
-Send2Trash==1.8.0
+MarkupSafe==2.1.0
+metadata-parser==0.10.5
+pymongo==4.0.1
+python-dotenv==0.19.2
+requests==2.27.1
+requests-toolbelt==0.9.1
 six==1.16.0
-stack-data==0.2.0
-terminado==0.13.1
-testpath==0.5.0
-tomli==2.0.1
-tornado==6.1
-traitlets==5.1.1
-wcwidth==0.2.5
-webencodings==0.5.1
+soupsieve==2.3.2.post1
+typing_extensions==4.1.1
+urllib3==1.26.9
 Werkzeug==2.0.3
-gunicorn==20.1.0
+zipp==3.7.0
