--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.12
 click==8.0.4
 dnspython==2.2.0
 Flask==2.0.3
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.2
 itsdangerous==2.1.0
